update initial part of dd and uploaded some of my design

--- a/design_doc.tex
+++ b/design_doc.tex
@@ -26,8 +26,11 @@
 % Some may not apply, but I'm sure most will
 \section{Frontspiece}
 \subsection{Date of issue and status}
+2 December 2016 In-progress
 \subsection{Issuing organization}
+The STEM Academy Data Solution, CS Capstone Group 48, Oregon State University 
 \subsection{Authorship}
+Shannon Ernst, Javier Franco, Kyle Nichols
 \subsection{Change history}
 
 \section{Introduction}
