--- a/kyle_design.tex
+++ b/kyle_design.tex
@@ -19,6 +19,7 @@
 \geometry{margin=.75in}
 
 \usepackage{hyperref}
+\usepackage{vertabim}
 
 % This method for displaying a relational schema was found on Stack Exchange from user Bruno Vandekerkhove
 % tex.stackexchange.com/questions/296948/creating-a-relational-database-schema
@@ -144,24 +145,22 @@ The below diagram outlines the relational database schema described above.
 Each table will be created with the following SQL syntax.
 In particular, tables will use AUTO INCREMENT to automatically increment and create IDs.
 They will also be done in the following order because some tables reference others.
-\lstset{breaklines=true}
-\begin{lstlisting}[language=SQL]
+\lstset{language=SQL,breaklines=true}
+\begin{lstlisting}
 CREATE TABLE Survey
 (
  survey_id int NOT NULL AUTO_INCREMENT
  title varchar(255)
  PRIMARY KEY (survey_id)
 )
-\end{lstlisting}
-\begin{lstlisting}[language=SQL]
+
 CREATE TABLE Question
 (
  question_id int NOT NULL AUTO_INCREMENT
  text varchar(1020) NOT NULL
  PRIMARY KEY (question_id)
 )
-\end{lstlisting}
-\begin{lstlisting}[language=SQL]
+
 CREATE TABLE Contains
 (
  survey_id int NOT NULL
@@ -170,8 +169,7 @@ CREATE TABLE Contains
  FOREIGN KEY (survey_id) REFERENCES Survey(survey_id)
  FOREIGN KEY (question_id) REFERENCES Question(question_id)
 )
-\end{lstlisting}
-\begin{lstlisting}[language=SQL]
+
 CREATE TABLE Responder
 (
  responder_id int NOT NULL AUTO_INCREMENT
@@ -181,16 +179,14 @@ CREATE TABLE Responder
  age int
  PRIMARY KEY (responder_id)
 )
-\end{lstlisting}
-\begin{lstlisting}[language=SQL]
+
 CREATE TABLE Parent
 (
  responder_id int NOT NULL
  PRIMARY KEY (responder_id)
  FOREIGN KEY (responder_id) REFERENCES Responder(responder_id)
 )
-\end{lstlisting}
-\begin{lstlisting}[language=SQL]
+
 CREATE TABLE Student
 (
  responder_id int NOT NULL
@@ -201,8 +197,7 @@ CREATE TABLE Student
  FOREIGN KEY (parent1_id) REFERENCES Parent(responder_id)
  FOREIGN KEY (parent2_id) REFERENCES Parent(responder_id)
 )
-\end{lstlisting}
-\begin{lstlisting}[language=SQL]
+
 CREATE TABLE Response
 (
  question_id int NOT NULL
@@ -212,39 +207,37 @@ CREATE TABLE Response
  FOREIGN KEY (responder_id) REFERENCES Responder(responder_id)
 )
 \end{lstlisting}
-\begin{lstlisting}[language=SQL]
-CREATE TABLE Multiple_Choice
-(
- question_id int NOT NULL
- responder_id int NOT NULL
- answer char(1)
- PRIMARY KEY (question_id, responder_id)
- FOREIGN KEY (question_id) REFERENCES Question(question_id)
- FOREIGN KEY (responder_id) REFERENCES Responder(responder_id)
-)
-\end{litlisting}
-\begin{lstlisting}[language=SQL]
-CREATE TABLE Matrix
-(
- question_id int NOT NULL
- responder_id int NOT NULL
- answer int
- PRIMARY KEY (question_id, responder_id)
- FOREIGN KEY (question_id) REFERENCES Question(question_id)
- FOREIGN KEY (responder_id) REFERENCES Responder(responder_id)
-)
-\end{listlisting}
-\begin{lstlisting}[language=SQL]
-CREATE TABLE Text
-(
- question_id int NOT NULL
- responder_id int NOT NULL
- answer varchar(1020)
- PRIMARY KEY (question_id, responder_id)
- FOREIGN KEY (question_id) REFERENCES Question(question_id)
- FOREIGN KEY (responder_id) REFERENCES Responder(responder_id)
-)
-\end{listlisting}
+
+
+%CREATE TABLE Multiple_Choice
+%(
+ % question_id int NOT NULL
+  %responder_id int NOT NULL
+% answer char(1)
+ %PRIMARY KEY (question_id, responder_id)
+ %FOREIGN KEY (question_id) REFERENCES Question(question_id)
+ %FOREIGN KEY (responder_id) REFERENCES Responder(responder_id)
+%)
+
+%CREATE TABLE Matrix
+%(
+ %question_id int NOT NULL
+ %responder_id int NOT NULL
+ %answer int
+% PRIMARY KEY (question_id, responder_id)
+ %FOREIGN KEY (question_id) REFERENCES Question(question_id)
+ %FOREIGN KEY (responder_id) REFERENCES Responder(responder_id)
+%)
+
+%CREATE TABLE Text
+%(
+ %question_id int NOT NULL
+ %responder_id int NOT NULL
+ %answer varchar(1020)
+ %PRIMARY KEY (question_id, responder_id)
+ %FOREIGN KEY (question_id) REFERENCES Question(question_id)
+ %FOREIGN KEY (responder_id) REFERENCES Responder(responder_id)
+%)
 
 \subsection{Database interaction}
 To allow for interaction between the survey and report generation, an API will need to be created to work with both.
